# manada

./: Cargo.toml  README.md  flake.nix  test
conversions/: data  data.toml  distance  distance.toml  temperature  temperature.toml
nix/: config.nix  devshell.nix  home.nix  module.nix  overlay.nix  package.nix  utils.nix
src/: cli.rs  config.rs  lib.rs  main.rs  parse.rs
src/calculation/: mod.rs  parser.rs  token.rs
