[package]
name = "manada"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.36", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "from"] }
dirs = "6.0.0"
itertools = "0.14.0"
petgraph = "0.8.1"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
rust_decimal_macros = "1.37.1"
